recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: not found: value nbPas
  if(nbPas==0)
     ^Spiral:10: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters angle, length, increment.
    spiral(length+pas)
          ^