recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(nbPas==0)
  {
    
    avance(length)
    gauche(angle)
  }else{
    avance(length)
    gauche(angle)
    spiral(length+pas)
  }
}